Typeahead + validation (with bugs)

--- a/CoffeeTracker/src/journal.html
+++ b/CoffeeTracker/src/journal.html
@@ -1,4 +1,4 @@
-<template>
+﻿<template>
     <style>
         .virtual-list {
             padding-top: 10px;
@@ -43,6 +43,28 @@
                 cursor: pointer;
                 color: firebrick;
             }
+
+        .twitter-typeahead, .tt-open {
+            width: 100%;
+        }
+
+        .tt-open {
+            background-color: #ffd;
+        }
+
+        .tt-suggestion {
+            padding: 3px 20px;
+            cursor: pointer;
+        }
+
+            .tt-suggestion:hover {
+                background-color: #eee;
+            }
+
+        .twitter-typeahead .tt-input {
+            z-index: auto;
+        }
+
     </style>
 
     <div class="container">
@@ -51,14 +73,18 @@
         </div>
 
         <require from="./resources/date-format"></require>
-        <require from="./resources/price-format"></require>
+        <require from="./resources/number-format"></require>
 
         <div class="row">
             <div class="col-xs-6">
-                <form>
+                <form role="form" validate.bind="validation" submit.delegate="save(newEntry)">
+                    <!--<div class="alert alert-danger" role="alert" if.bind="!validation.result.isValid">
+                        <i class="fa fa-exclamation-triangle"></i> Die Eingaben sind nicht korrekt!
+                    </div>-->
                     <div class="form-group">
                         <label for="coffeeType">Kaffeetyp</label>
-                        <input type="text" class="form-control" id="coffeeType" value.bind="newEntry.coffeeType"/>
+                        <div class="clear"></div>
+                        <input type="text" class="form-control twitter-typeahead" id="coffeeType" value.bind="newEntry.coffeeType" autocomplete="off" />
                     </div>
                     <div class="form-group">
                         <label for="location">Ort</label>
@@ -66,13 +92,13 @@
                     </div>
                     <div class="form-group">
                         <label for="price">Preis</label>
-                        <input type="text" class="form-control" id="price" value.bind="newEntry.itemPrice"/>
+                        <input type="text" class="form-control" id="price" value.bind="newEntry.itemPrice | numberFormat:2  & updateTrigger:'blur'" autocomplete="off"/>
                     </div>
                     <div class="form-group">
                         <label for="quantity">Anzahl</label>
-                        <input type="text" class="form-control" id="quantity" value.bind="newEntry.quantity"/>
+                        <input type="text" class="form-control" id="quantity" value.bind="newEntry.quantity | numberFormat:0" autocomplete="off"/>
                     </div>
-                    <button class="btn btn-default" click.delegate="save(newEntry)">Speichern</button>
+                    <button class="btn btn-default" type="submit" disabled.bind="!validation.result.isValid">Speichern</button>
                 </form>
             </div>
         </div>
@@ -98,13 +124,13 @@
                             <div class="col-xs-12">
                                 <dl class="dl-horizontal">
                                     <dt>Preis: </dt>
-                                    <dd>${entry.itemPrice | priceFormat} </dd>
+                                    <dd>${entry.itemPrice | numberFormat:0} </dd>
 
                                     <dt>Anzahl: </dt>
                                     <dd>${entry.quantity}  </dd>
 
                                     <dt>Gesamtpreis: </dt>
-                                    <dd>${(entry.quantity * entry.itemPrice)  | priceFormat}  </dd>
+                                    <dd>${(entry.quantity * entry.itemPrice)  | numberFormat:2}  </dd>
                                 </dl>
                             </div>
                         </div>
