--- a/CoffeeTracker/index.html
+++ b/CoffeeTracker/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/splash.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 
 <body aurelia-app="main">
